Added JavaScript files, fully working app

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
+  <script type="text/javascript" src="static/jquery-3.4.1.min.js"></script>
 </head>
 <body>
   <header>
@@ -13,5 +14,6 @@
     <input type="text" name="username" id="username" placeholder="Your Name" required>
     <input type="button" value="Enter" id="login">
   </div>
+  <script type="text/javascript" src="static/login.js"></script>
 </body>
 </html>
