--- a/options.html
+++ b/options.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <script type="text/javascript" src="static/jquery-3.4.1.min.js"></script>
 </head>
 <body>
   <header>
     <h1>Note Web App</h1>
   </header>
   <div>
-    <h2>Welcome username</h2>
+    <h2 id="welcome">Welcome username</h2>
   </div>
   <div>
     <form action="/add" method="post" class="options">
@@ -32,5 +33,6 @@
     <p>Info:</p>
     <p>$$$INFO$$$</p>
   </footer>
+  <script type="text/javascript" src="static/clear.js"></script>
 </body>
 </html>
