--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
+  <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
   <header>
     <h1>Welcome to the wonderfull Note Web App</h1>
   </header>
-  <div>
+  <div class="options">
     <p>Enter your name:</p>
     <input type="text" name="username" id="username" placeholder="Your Name" required>
-    <input type="button" value="Enter" id="login">
+    <input type="button" value="Enter" class="button" id="login">
   </div>
   <script type="text/javascript" src="static/login.js"></script>
 </body>
